fpp_analysis/src/test/defs/duplicate-symbols-multi.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/defs/duplicate-symbols-multi.fpp:5:18
  |
5 |   active component C {
  |                    ^ redefinition of symbol C
  |
 ::: [ local path prefix ]/defs/duplicate-symbols-multi.fpp:1:1
  |
1 | / passive component C {
2 | |
3 | | }
  | |_- previous definition is here

error: duplicate symbol definition
  --> [ local path prefix ]/defs/duplicate-symbols-multi.fpp:14:22
   |
14 |     active component C2 {}
   |                      ^^ redefinition of symbol C2
   |
  ::: [ local path prefix ]/defs/duplicate-symbols-multi.fpp:12:5
   |
12 |     active component C2 {}
   |     ---------------------- previous definition is here

